MDEV-5975 Prepared statements with DATE literals do not honor NO_ZERO_IN_DATE